--- a/calc.html
+++ b/calc.html
@@ -8,97 +8,109 @@
     <style>
         #inp {
             text-align: center;
-            font-size: 60px;
-            margin-top: 2.5px;
-            margin-left: 1.25px;
-            height: 140px;
-            width: 490px;
+            font-size: 400%;
+            margin-top: 0.5%;
+            margin-left: 0.25%;
+            height: 93.5%;
+            width: 98%;
         }
 
         #calc {
-            background-color: green;
+            background-color: grey;
+            border: 5px solid black;
             height: 620px;
             width: 550px;
-            position: absolute;
+            margin: auto;
         }
 
         #screen {
             background-color: white;
-            height: 150px;
-            width: 500px;
+            border: 3px solid black;
+            height: 24%;
+            width: 91%;
             position: relative;
-            margin-top: 10px;
-            margin-left: 25px;
+            margin-top: 1%;
+            margin-left: 4.5%;
         }
 
         #buttons {
             background-color: blue;
-            height: 435px;
-            width: 500px;
-            margin-top: 10px;
-            margin-left: 25px;
+            height: 70%;
+            width: 91%;
+            margin-top: 2%;
+            margin-left: 5%;
         }
 
         .button {
-            margin-top: 5.5px;
+            margin-top: 1%;
             font-family: 'Lucida Sans';
-            width: 115px;
-            height: 80px;
-            margin-left: 5.5px;
-            font-size: 30px;
+            width: 22%;
+            height: 90%;
+            margin-left: 1.125%;
+            font-size: 200%;
+        }
+
+        .rows {
+            height: 19%;
         }
 
         #ac {
-            margin-top: 5.5px;
+            margin-top: 1%;
             font-family: 'Lucida Sans';
-            font-weight: 50px;
-            width: 115px;
-            height: 80px;
-            margin-left: 80px;
-            font-size: 30px;
+            width: 30%;
+            height: 20%;
+            margin-left: 10%;
+            font-size: 200%;
         }
 
         #equal {
-            margin-top: 5.5px;
+            margin-top: 1%;
             font-family: 'Lucida Sans';
-            font-weight: 50px;
-            width: 115px;
-            height: 80px;
-            margin-left: 100px;
-            font-size: 30px;
+            width: 30%;
+            height: 20%;
+            margin-left: 18%;
+            font-size: 200%;
+        }
+
+        @media only screen and (min-width: 200px) and (max-width: 567px) {
+            #calc {
+                width: 100%;
+            }
+        }
+        @media only screen and (min-width: 568px) and (max-width: 992px) {
+            #calc {
+                width: 100%;
+            }
         }
     </style>
 </head>
 
-<body style="margin-left: 480px;" ;>
+<body>
     <div id="calc">
         <div id="screen">
             <input type="text" name="scr" id="inp" />
-            <!-- <div id="inp">
-
-            </div> -->
         </div>
 
         <div id="buttons">
-            <div id="row1">
+            <div class="rows">
                 <button class="button" value="/" onclick="enter(this.value)">/</button>
                 <button class="button" value="*" onclick="enter(this.value)">x</button>
                 <button class="button" value="-" onclick="enter(this.value)">-</button>
                 <button class="button" value="+" onclick="enter(this.value)">+</button>
             </div>
-            <div id="row2">
+            <div class="rows">
                 <button class="button" value="1" onclick="enter(this.value)">1</button>
                 <button class="button" value="2" onclick="enter(this.value)">2</button>
                 <button class="button" value="3" onclick="enter(this.value)">3</button>
                 <button class="button" value="4" onclick="enter(this.value)">4</button>
             </div>
-            <div id="row3">
+            <div class="rows">
                 <button class="button" value="5" onclick="enter(this.value)">5</button>
                 <button class="button" value="6" onclick="enter(this.value)">6</button>
                 <button class="button" value="7" onclick="enter(this.value)">7</button>
                 <button class="button" value="8" onclick="enter(this.value)">8</button>
             </div>
-            <div id="row4">
+            <div class="rows">
                 <button class="button" value="9" onclick="enter(this.value)">9</button>
                 <button class="button" value="0" onclick="enter(this.value)">0</button>
                 <button class="button" value="." onclick="enter(this.value)">.</button>
@@ -108,6 +120,7 @@
             <button id="equal" onclick="equals()">=</button>
         </div>
     </div>
+
 </body>
 <script>
     document.addEventListener('keypress', (event) => {
@@ -158,16 +171,16 @@
             else if (op === '*') ans = parseFloat(first) * parseInt(second);
             else if (op === '-') ans = parseInt(first) - parseInt(second);
             else if (op === '+') ans = parseInt(first) + parseInt(second);
-            else ans = "Wrong Expression"
+            else ans = "Wrong Expression";
         } else {
             if (op === '/') ans = parseFloat(first) / parseFloat(second);
             else if (op === '*') ans = parseFloat(first) * parseFloat(second);
             else if (op === '-') ans = parseFloat(first) - parseFloat(second);
             else if (op === '+') ans = parseFloat(first) + parseFloat(second);
-            else ans = "Wrong Expression"
+            else ans = "Wrong Expression";
         }
-        if(!check)
-        document.getElementById("inp").value = ans;
+        if (!check)
+            document.getElementById("inp").value = ans;
     }
 </script>
 
