--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
             font-size:200%;
             margin-top: 0.5%;
             margin-left: 0.25%;
+            margin-right: 0.25%;
+            margin-bottom: 0.5%;
             height: 93.5%;
             width: 98%;
         }
