--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     <style>
         #inp {
             text-align: center;
-            font-size:200%;
-            height: 96.5%;
-            width: 98.55%;
+            width: 100%;
+            height: 100%;
+            box-sizing: border-box;
+            border: 1px solid black;
+            border-radius: 4px;
+            font-size: 40px;
         }
 
         #calc {
@@ -75,6 +78,7 @@
                 width: 100%;
             }
         }
+
         @media only screen and (min-width: 568px) and (max-width: 992px) {
             #calc {
                 width: 100%;
