--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         }
 
         #screen {
-            background-color: white;
+            background-color: blue;
             border: 3px solid black;
             height: 24%;
             width: 91%;
