--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             text-align: center;
             width: 100%;
             height: 100%;
+
             box-sizing: border-box;
             border: 1px solid black;
             border-radius: 4px;
@@ -25,7 +26,7 @@
         }
 
         #screen {
-            background-color: blue;
+            background-color: white;
             border: 3px solid black;
             height: 24%;
             width: 91%;
